Header and Navigation and Logo

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -113,7 +113,6 @@ header {
 
 .main-nav li {
   margin-right: 40px;
-  float: left;
   display: inline-block;
 }
 
@@ -123,10 +122,13 @@ header {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 90%;
+  border-bottom: 3px solid transparent;
+  transition: border-bottom 0.2s;
 }
 
 .main-nav li:hover,
 .main-nav li:active {
+  transition: border-bottom 0.2s;
   padding-bottom: 10px;
   border-bottom: 3px solid #3aa22b;
 }
