--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -471,6 +471,7 @@ textarea {
   padding: 7px;
   border-radius: 3px;
   border: 1px solid #ccc;
+  color: rgb(114, 114, 114);
 }
 
 textarea {
@@ -483,4 +484,83 @@ input[type="checkbox"] {
 
 *:focus {
   outline: none;
+}
+
+/************************************************************/
+/* ----------- FOOTER ---------------- */
+/************************************************************/
+footer {
+  background-color: #333;
+  color: #888;
+  padding: 50px;
+  font-size: 80%;
+}
+
+.footer-nav {
+  list-style: none;
+  float: left;
+}
+
+.social-links {
+  list-style: none;
+  float: right;
+}
+
+.footer-nav li,
+.social-links li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+  margin-right: 0;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+  text-decoration: none;
+  color: #888;
+  transition: color 0.2s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+  color: #ddd;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+  font-size: 160%;
+}
+
+.facebook-icon,
+.twitter-icon,
+.google-icon,
+.instagram-icon {
+  transition: color 0.2s;
+}
+
+.facebook-icon:hover {
+  color: #3b5998;
+}
+
+.twitter-icon:hover {
+  color: #00aced;
+}
+
+.google-icon:hover {
+  color: #dd4b39;
+}
+
+.instagram-icon:hover {
+  color: #517fa4;
+}
+
+footer p {
+  color: #888;
+  text-align: center;
+  margin-top: 20px;
 }
