--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -258,7 +258,18 @@ h3 {
     width: auto;
     float: left;
 }
+/*****Mobile Navi *****/
+.mobile-nav-icon {
+    float: right;
+    margin-top: 30px;
+    cursor: pointer;
+    display: none;
+}
 
+.mobile-nav-icon i {
+    font-size: 200%;
+    color: #fff;
+}
 
 /*****Main Navi *****/
 
@@ -295,20 +306,20 @@ h3 {
 
 /*****Sticky Navi *****/
 
-.sticky {
+.sticky {   
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.98);
     box-shadow: 0 2px 2px #efefef;
-    z-index: 1;
+    z-index: 9999;
 }
 
 .sticky .main-nav li a:link,
 .sticky .main-nav li a:visited {
-    color: #555;
     padding: 16px 0;
+    color: #555;
 }
 
 .sticky .logo {
@@ -724,9 +735,9 @@ footer p {
 }
 
 
-/**
-* Simple fade transition,
-*/
+/************************************************************/
+/* Simple fade transition */
+/***********************************************************/
 
 .mfp-fade.mfp-bg {
     opacity: 0;
@@ -757,3 +768,45 @@ footer p {
 .mfp-fade.mfp-wrap.mfp-removing .mfp-content {
     opacity: 0;
 }
+
+/************************************************************/
+
+
+/* ----------- ANIMATIONS USING WAYPOINTS AND ANIMATE.CSS ---------------- */
+
+
+/************************************************************/
+
+.js--wp-1 {
+    opacity: 0;
+    animation-duration: 1s;
+}
+
+.js--wp-1 .animate__fadeIn {
+    opacity: 1;
+}
+
+.js--wp-2 {
+    opacity: 0;
+    animation-duration: 1s;
+}
+
+.js--wp-2 .animate__fadeInUp {
+    opacity: 1;
+}
+
+.js--wp-3 {
+    opacity: 0;
+    animation-duration: 1s;
+}
+
+.js--wp-3 .animate__fadeIn {
+    opacity: 1;
+}
+
+.js--wp-5 {
+    animation-duration: 1s;
+}
+
+
+
