--- a/resources/css/login.css
+++ b/resources/css/login.css
@@ -1,137 +1,146 @@
 * {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
 html {
-  background-color: #fff;
-  color: #555;
-  font-family: "Lato", "Arial", sans-serif;
-  font-size: 20px;
-  font-weight: 300;
-  text-rendering: optimizeLegibility;
-  /* This will render the font in a perfect way */
+    background-color: #fff;
+    color: #555;
+    font-family: "Lato", "Arial", sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    text-rendering: optimizeLegibility;
+    /* This will render the font in a perfect way */
 }
 
 .row {
-  max-width: 1140px;
-  margin: 0 auto;
+    max-width: 1140px;
+    margin: 0 auto;
 }
 
 header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/kamayan-bg.jpg);
-  height: 100vh;
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/kamayan-bg.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 h2 {
-  text-align: center;
-  word-wrap: 2px;
-  color: rgb(255, 255, 255);
-  font-size: 180%;
-  /* This is eqaul to 40px pixels because we set the global font size to 20 and we double it to make it 40px */
-  font-weight: 300;
-  text-transform: uppercase;
-  letter-spacing: 4px;
-  margin-bottom: 50px;
+    text-align: center;
+    word-wrap: 2px;
+    color: rgb(255, 255, 255);
+    font-size: 180%;
+    /* This is eqaul to 40px pixels because we set the global font size to 20 and we double it to make it 40px */
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    margin-bottom: 50px;
 }
 
 h2::after {
-  /* Sa baba ng h2 IMPORTANT KAPAG GAGAMIT KA NG PSEUDO CLASS KAILANGAN MO I SET YUNG CONTENT */
-  display: block;
-  height: 2px;
-  background-color: #3aa22b;
-  content: "";
-  width: 100px;
-  margin: 0 auto;
-  margin-top: 30px;
+    /* Sa baba ng h2 IMPORTANT KAPAG GAGAMIT KA NG PSEUDO CLASS KAILANGAN MO I SET YUNG CONTENT */
+    display: block;
+    height: 2px;
+    background-color: #3aa22b;
+    content: "";
+    width: 100px;
+    margin: 0 auto;
+    margin-top: 30px;
 }
 
 .form-box {
-  background-color: rgb(255, 255, 255);
-  width: 50%;
-  box-shadow: 0 2px 2px #efefef;
-  margin: 0 auto;
-  padding: 50px;
+    background-color: rgb(255, 255, 255);
+    width: 50%;
+    box-shadow: 0 2px 2px #efefef;
+    margin: 0 auto;
+    padding: 50px;
 }
 
 .login-header {
-  margin-top: 60px;
+    margin-top: 60px;
 }
 
 .password-form {
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgb(214, 214, 214);
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgb(214, 214, 214);
 }
 
 .button {
-  padding-top: 20px;
+    padding-top: 20px;
 }
 
-input[type="submit"], input[type="password"], input[type="email"] {
-  width: 100%;
-  height: 40px;
-  margin-bottom: 10px;
-  border: 1px solid rgb(214, 214, 214);
-  font-weight: 300;
+input[type="submit"],
+input[type="password"],
+input[type="email"] {
+    width: 100%;
+    height: 40px;
+    margin-bottom: 10px;
+    border: 1px solid rgb(214, 214, 214);
+    font-weight: 300;
 }
 
-.btn:link, .btn:visited {
-  display: inline-block;
-  /* Pwede mong i set yung height, width, margin and padding */
-  font-size: 110%;
-  font-weight: 300;
-  text-decoration: none;
-  padding: 10px 30px;
-  margin-top: 20px;
-  transition: background-color 0.2s, border 0.2s, color 0.2s;
+.btn:link,
+.btn:visited {
+    display: inline-block;
+    /* Pwede mong i set yung height, width, margin and padding */
+    font-size: 110%;
+    font-weight: 300;
+    text-decoration: none;
+    padding: 10px 30px;
+    margin-top: 20px;
+    transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
-.btn-full:link, .btn-full:visited, input[type="submit"] {
-  background-color: #44bd32;
-  border: 1px solid #44bd32;
-  margin-right: 10px;
-  color: #fff;
+.btn-full:link,
+.btn-full:visited,
+input[type="submit"] {
+    background-color: #44bd32;
+    border: 1px solid #44bd32;
+    margin-right: 10px;
+    color: #fff;
 }
 
-.btn:hover, .btn:active {
-  background-color: #3aa22b;
+.btn:hover,
+.btn:active {
+    background-color: #3aa22b;
 }
 
-.btn-full:hover, .btn-full:active, input[type="submit"]:hover, input[type="submit"]:active {
-  border: 1px solid #3aa22b;
+.btn-full:hover,
+.btn-full:active,
+input[type="submit"]:hover,
+input[type="submit"]:active {
+    border: 1px solid #3aa22b;
 }
 
 a {
-  text-decoration: none;
-  float: right;
-  padding: 10px;
-  margin-bottom: 10px;
-  color: #00a2ff;
-  display: block;
-  font-size: 80%;
+    text-decoration: none;
+    float: right;
+    padding: 10px;
+    margin-bottom: 10px;
+    color: #00a2ff;
+    display: block;
+    font-size: 80%;
 }
 
 .signup {
-  margin-top: 10px;
-  border-top: 1px solid rgb(182, 182, 182);
-  font-size: 80%;
-  /* word-spacing: -1px; */
+    margin-top: 10px;
+    border-top: 1px solid rgb(182, 182, 182);
+    font-size: 80%;
+    /* word-spacing: -1px; */
 }
 
 .signup-button {
-  float: none;
-  color: #44bd32;
-  display: inline-block;
-  margin-top: 10px;
-  font-size: 100%;
+    float: none;
+    color: #44bd32;
+    display: inline-block;
+    margin-top: 10px;
+    font-size: 100%;
 }
 
 form label {
-  padding-top: 10px;
-  display: inline-block;
+    padding-top: 10px;
+    display: inline-block;
 }
